fix: refactor admin & user controller (#76)
